<resources>
    <string name="app_name">Girlfriend Supporter</string>
    <string name="girlfriend_supporter">Girlfriend supporter</string>
    <string name="instagram">Instagram</string>
    <string name="tiktok">TikTok</string>
    <string name="username">Username</string>
    <string name="check">Check</string>
    <string name="social_media_information">Social media information</string>
    <string name="like_x">Like (%1d)</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="share_x">Share (%1d)</string>
    <string name="new_posts">new posts</string>
    <string name="last_checked">last checked %1s</string>
    <string name="x_liked">%1$d liked</string>
    <string name="x_shared">%1$d shared</string>
    <string name="not_checked_yet">Not checked yet</string>
    <string name="no_user_found_for_platform">No user found for platform %1s!</string>
</resources>