<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintlayout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
        android:id="@+id/edittext_instagram_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:autofillHints="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_instagram"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_tiktok"
        android:layout_width="129dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/tiktok"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_instagram" />

    <TextView
        android:id="@+id/textview_instagram"
        android:layout_width="129dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/instagram"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_tiktok_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:autofillHints="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_tiktok"
        app:layout_constraintTop_toBottomOf="@+id/edittext_instagram_user" />

    <Button
        android:id="@+id/button_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_tiktok_user" />

    <Button
        android:id="@+id/button_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_check" />

    <Button
        android:id="@+id/button_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_like" />

    <TextView
        android:id="@+id/textview_last_checked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:enabled="true"
        android:text="@string/not_checked_yet"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toEndOf="@+id/button_check"
        app:layout_constraintTop_toBottomOf="@+id/edittext_tiktok_user" />

    <TextView
        android:id="@+id/textview_posts_liked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:enabled="true"
        android:text="@string/new_posts"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toEndOf="@+id/button_like"
        app:layout_constraintTop_toBottomOf="@+id/textview_last_checked" />

    <TextView
        android:id="@+id/textview_posts_shared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:enabled="true"
        android:text="@string/new_posts"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toEndOf="@+id/button_share"
        app:layout_constraintTop_toBottomOf="@+id/textview_posts_liked" />

</androidx.constraintlayout.widget.ConstraintLayout>